--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
         "php": "^8.1",
         "ext-intl": "*",
         "ext-mbstring": "*",
+        "codeigniter4/shield": "^1.1",
+        "fakerphp/faker": "^1.23",
         "laminas/laminas-escaper": "^2.13",
         "league/oauth2-client": "^2.7",
         "psr/log": "^3.0"
     },
     "require-dev": {
         "codeigniter/coding-standard": "^1.7",
-        "fakerphp/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "^3.47.1",
         "kint-php/kint": "^5.0.4",
         "mikey179/vfsstream": "^1.6",
